fix nav bar item alignment

--- a/src/components/navigation-bar/navigation-bar.css
+++ b/src/components/navigation-bar/navigation-bar.css
@@ -3,6 +3,7 @@
 
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: var(--space-small) 24px;
   background-color: white;
 
